fix(leadership): restructure html to work on mobile

--- a/leadership.htm
+++ b/leadership.htm
@@ -123,6 +123,20 @@
 								<div class="text-xl font-bold mt-6">Duane Highley
 								</div>
 								<div class="mb-6">Chief Executive Officer</div>
+								<div class="" data-bio>
+									<div class="">
+										Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives.
+										He
+										previously served as President/CEO
+										for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric
+										Cooperatives,
+										Inc. (AECI). Duane serves as Co-Chair
+										of the Electric Subsector Coordinating Council (ESCC), coordinating security
+										efforts
+										between electric utilities and the
+										U.S. Government.
+									</div>
+								</div>
 								<div class="mt-auto">
 									<button type="button"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
@@ -131,17 +145,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="" data-bio>
-								<div class="">
-									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
-									previously served as President/CEO
-									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
-									Inc. (AECI). Duane serves as Co-Chair
-									of the Electric Subsector Coordinating Council (ESCC), coordinating security efforts
-									between electric utilities and the
-									U.S. Government.
-								</div>
-							</div>
+
 						</div>
 						<div class="p-4 outline outline-solid outline-1 group" data-card="elda">
 							<div class="flex flex-col h-full">
@@ -151,23 +155,25 @@
 								</div>
 								<div class="text-xl font-bold mt-6">Elda de la Peña</div>
 								<div class="mb-6">Chief Administrative Officer and CHRO</div>
+								<div class="" data-bio>
+									<div class="">
+										Elda has served in numerous human resources roles since joining Tri-State in
+										1997.
+										As CAO/CHRO, she oversees a variety
+										of service functions, including: human resources, people and culture, payroll,
+										training, IT, cyber security, fleet,
+										facilities and records. Elda has a master’s degree in Language and Interpersonal
+										Communication, and is an SHRM Senior
+										Certified Professional and an HRCI certified Senior Professional in Human
+										Resources.
+									</div>
+								</div>
 								<div class="mt-auto">
 									<button type="button"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
-								</div>
-							</div>
-							<div class="" data-bio>
-								<div class="">
-									Elda has served in numerous human resources roles since joining Tri-State in 1997.
-									As CAO/CHRO, she oversees a variety
-									of service functions, including: human resources, people and culture, payroll,
-									training, IT, cyber security, fleet,
-									facilities and records. Elda has a master’s degree in Language and Interpersonal
-									Communication, and is an SHRM Senior
-									Certified Professional and an HRCI certified Senior Professional in Human Resources.
 								</div>
 							</div>
 						</div>
@@ -179,26 +185,28 @@
 								</div>
 								<div class="text-xl font-bold mt-6">Bob Frankmore</div>
 								<div class="mb-6">Chief of Staff</div>
+								<div class="" data-bio>
+									<div class="">
+										Bob joined Tri-State in 2014, serving first as Vice President, Strategy before
+										becoming Chief of Staff in June 2022. As
+										Chief of Staff, Bob works closely with the CEO and oversees Government Relations
+										and
+										External Affairs, Communications,
+										and Strategy. Previously, he served as Senior Vice President at Hill & Knowlton
+										Strategies. Bob has more than 20 years
+										of experience in the energy industry and more than 25 years of experience in
+										governmental relations, communications and
+										public affairs. He has a Bachelor of Arts degree in political science from
+										Colorado
+										State University.
+									</div>
+								</div>
 								<div class="mt-auto">
 									<button type="button"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
-								</div>
-							</div>
-							<div class="" data-bio>
-								<div class="">
-									Bob joined Tri-State in 2014, serving first as Vice President, Strategy before
-									becoming Chief of Staff in June 2022. As
-									Chief of Staff, Bob works closely with the CEO and oversees Government Relations and
-									External Affairs, Communications,
-									and Strategy. Previously, he served as Senior Vice President at Hill & Knowlton
-									Strategies. Bob has more than 20 years
-									of experience in the energy industry and more than 25 years of experience in
-									governmental relations, communications and
-									public affairs. He has a Bachelor of Arts degree in political science from Colorado
-									State University.
 								</div>
 							</div>
 						</div>
@@ -210,27 +218,30 @@
 								</div>
 								<div class="text-xl font-bold mt-6">Clifton Karnei</div>
 								<div class="mb-6">Interim Chief Financial Officer</div>
+								<div class="" data-bio>
+									<div class="">
+										Clifton Karnei joined Tri-State as the Interim CFO in 2025. He previously served
+										as
+										the Executive Vice President and
+										General Manager of Brazos Electric Power Cooperative, Inc., the largest
+										generation
+										and transmission cooperative in Texas
+										until he retired in 2023. Clifton holds a Bachelor of Business Administration in
+										accounting, summa cum laude, from the
+										University of Texas at San Antonio and is a certified public accountant. He has
+										served in leadership roles on the boards
+										of several national energy organizations, including the Electric Reliability
+										Council
+										of Texas (ERCOT), ACES Power
+										Marketing, and the National Renewables Cooperative Organization (NRCO).
+									</div>
+								</div>
 								<div class="mt-auto">
 									<button type="button"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
-								</div>
-							</div>
-							<div class="" data-bio>
-								<div class="">
-									Clifton Karnei joined Tri-State as the Interim CFO in 2025. He previously served as
-									the Executive Vice President and
-									General Manager of Brazos Electric Power Cooperative, Inc., the largest generation
-									and transmission cooperative in Texas
-									until he retired in 2023. Clifton holds a Bachelor of Business Administration in
-									accounting, summa cum laude, from the
-									University of Texas at San Antonio and is a certified public accountant. He has
-									served in leadership roles on the boards
-									of several national energy organizations, including the Electric Reliability Council
-									of Texas (ERCOT), ACES Power
-									Marketing, and the National Renewables Cooperative Organization (NRCO).
 								</div>
 							</div>
 						</div>
@@ -242,29 +253,34 @@
 								</div>
 								<div class="text-xl font-bold mt-6">Chris Pink</div>
 								<div class="mb-6">Senior Vice President of Operations</div>
+								<div class="" data-bio>
+									<div class="">
+										Chris joined Tri-State in 2008 and has served in numerous engineering and
+										management
+										roles, including Vice President of
+										Engineering and Construction and Vice President of Transmission Engineering. As
+										SVP
+										of Operations, he oversees
+										Tri-State’s mining, generation, and transmission operations and construction.
+										Before
+										Tri-State, he contributed to
+										advancements in renewable energy integration at the National Renewable Energy
+										Laboratory and served as an electrical
+										engineer in both cooperative and consulting capacities. He began his career in
+										the
+										U.S. Navy as a nuclear plant
+										supervisor and instructor. He holds a master's degree in engineering systems and
+										a
+										bachelor's degree in electrical
+										engineering from the Colorado School of Mines.
+									</div>
+								</div>
 								<div class="mt-auto">
 									<button type="button"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
-								</div>
-							</div>
-							<div class="" data-bio>
-								<div class="">
-									Chris joined Tri-State in 2008 and has served in numerous engineering and management
-									roles, including Vice President of
-									Engineering and Construction and Vice President of Transmission Engineering. As SVP
-									of Operations, he oversees
-									Tri-State’s mining, generation, and transmission operations and construction. Before
-									Tri-State, he contributed to
-									advancements in renewable energy integration at the National Renewable Energy
-									Laboratory and served as an electrical
-									engineer in both cooperative and consulting capacities. He began his career in the
-									U.S. Navy as a nuclear plant
-									supervisor and instructor. He holds a master's degree in engineering systems and a
-									bachelor's degree in electrical
-									engineering from the Colorado School of Mines.
 								</div>
 							</div>
 						</div>
@@ -276,26 +292,28 @@
 								</div>
 								<div class="text-xl font-bold mt-6">Reg Rudolph</div>
 								<div class="mb-6">Chief Energy Innovations Officer</div>
+								<div class="" data-bio>
+									<div class="">
+										Reg joined Tri-State in January 2022 and is responsible for developing and
+										implementing competitive energy services,
+										managing beneficial electrification programs and overseeing member relations.
+										Prior
+										to Tri-State, he served as General
+										Manager of San Isabel Electric Association, Inc. for 13 years and has more than
+										30 years of experience in the electric
+										cooperative utility industry. Reg has a Master of Business Administration degree
+										from Colorado State University and
+										bachelor’s degrees in business administration and economics from North Dakota
+										State
+										University.
+									</div>
+								</div>
 								<div class="mt-auto">
 									<button type="button"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
-								</div>
-							</div>
-							<div class="" data-bio>
-								<div class="">
-									Reg joined Tri-State in January 2022 and is responsible for developing and
-									implementing competitive energy services,
-									managing beneficial electrification programs and overseeing member relations. Prior
-									to Tri-State, he served as General
-									Manager of San Isabel Electric Association, Inc. for 13 years and has more than
-									30 years of experience in the electric
-									cooperative utility industry. Reg has a Master of Business Administration degree
-									from Colorado State University and
-									bachelor’s degrees in business administration and economics from North Dakota State
-									University.
 								</div>
 							</div>
 						</div>
@@ -307,32 +325,35 @@
 								</div>
 								<div class="text-xl font-bold mt-6">Jay Sturhahn</div>
 								<div class="mb-6">Senior Vice President and General Counsel</div>
+								<div class="" data-bio>
+									<div class="">
+										Jay joined Tri-State in October 2022. Prior to Tri-State, he was an equity
+										member of
+										Sherman & Howard, LLC
+										in Denver,
+										where he counseled and represented clients in matters involving corporate
+										governance, internal
+										investigations,
+										contractual disputes, construction law and matters related to FERC and PUC
+										regulation. He has more than 20
+										years of
+										legal experience, and began his legal career as a clerk on the U.S. Court of
+										Appeals, Sixth Circuit. Jay has
+										a Bachelor
+										of Arts degree in history from Yale University, and a Juris Doctor degree cum
+										laude
+										from the University of
+										Michigan Law
+										School. He is the incoming chair (2023-2025) of the Colorado Legal Aid
+										Foundation.
+									</div>
+								</div>
 								<div class="mt-auto">
 									<button type="button"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
-								</div>
-							</div>
-							<div class="" data-bio>
-								<div class="">
-									Jay joined Tri-State in October 2022. Prior to Tri-State, he was an equity member of
-									Sherman & Howard, LLC
-									in Denver,
-									where he counseled and represented clients in matters involving corporate
-									governance, internal
-									investigations,
-									contractual disputes, construction law and matters related to FERC and PUC
-									regulation. He has more than 20
-									years of
-									legal experience, and began his legal career as a clerk on the U.S. Court of
-									Appeals, Sixth Circuit. Jay has
-									a Bachelor
-									of Arts degree in history from Yale University, and a Juris Doctor degree cum laude
-									from the University of
-									Michigan Law
-									School. He is the incoming chair (2023-2025) of the Colorado Legal Aid Foundation.
 								</div>
 							</div>
 						</div>
@@ -344,27 +365,29 @@
 								</div>
 								<div class="text-xl font-bold mt-6">Lisa Tiffin</div>
 								<div class="mb-6">Senior Vice President of Energy Management</div>
+								<div class="" data-bio>
+									<div class="">
+										Lisa has served in numerous energy management roles since joining Tri-State in
+										July
+										2004, including her previous role as
+										Vice President of Planning and Analytics with responsibility for Tri-State’s
+										resource planning process. With over 30
+										years of experience in the energy industry, she has also held roles in energy
+										trading and operations, organized market
+										implementation, and fuel supply and transportation and is currently engaged on
+										key
+										reliability and greenhouse gas
+										initiatives within the industry. Lisa has held a NERC Balancing, Interchange and
+										Transmission certification since 2007
+										and has a Bachelor of Science degree in political science.
+									</div>
+								</div>
 								<div class="mt-auto">
 									<button type="button"
 										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black cursor-pointer"
 										data-expand>
 										View full profile
 									</button>
-								</div>
-							</div>
-							<div class="" data-bio>
-								<div class="">
-									Lisa has served in numerous energy management roles since joining Tri-State in July
-									2004, including her previous role as
-									Vice President of Planning and Analytics with responsibility for Tri-State’s
-									resource planning process. With over 30
-									years of experience in the energy industry, she has also held roles in energy
-									trading and operations, organized market
-									implementation, and fuel supply and transportation and is currently engaged on key
-									reliability and greenhouse gas
-									initiatives within the industry. Lisa has held a NERC Balancing, Interchange and
-									Transmission certification since 2007
-									and has a Bachelor of Science degree in political science.
 								</div>
 							</div>
 						</div>
