refactor(leadership): clean up bio template, card state styles, and JS injection
- Replace placeholder content in bio template with <div data-bio-content> for dynamic injection
- Remove unused scale and opacity effects for non-active cards in leadership grid
- Ensure only the active card is visually emphasized
- Update JS to inject only bio content into the template, preserving controls

--- a/leadership.htm
+++ b/leadership.htm
@@ -419,23 +419,7 @@
 											stroke-linecap="round" />
 									</svg>
 								</button>
-								<p>
-
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, explicabo eaque,
-									veniam
-									excepturi nam officia quam molestiae quisquam nihil delectus iure a hic ipsa maxime
-									exercitationem natus dignissimos. Nobis possimus vel aperiam dolore, voluptates
-									consequatur eius quos laudantium fugit expedita fugiat, nisi placeat sequi
-									repellendus
-									ipsum omnis exercitationem nostrum. Eveniet saepe atque eos exercitationem alias
-									facilis, modi dignissimos incidunt distinctio cum ex veritatis dicta soluta quod
-									suscipit aliquam vel, consequatur sit sint, ducimus minus aperiam tenetur! Ducimus,
-									quaerat, labore illum ab blanditiis aliquid repudiandae ratione rem laborum animi
-									autem
-									veniam voluptatum consequatur quo esse maiores qui repellendus, eum amet unde.
-								</p>
-								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo fuga soluta mollitia?
-									Debitis modi aliquam eum ut impedit. Ipsa, magni.</p>
+								<div data-bio-content></div>
 							</div>
 						</div>
 					</template>
