change(obr): new urls for forms

--- a/obr.htm
+++ b/obr.htm
@@ -618,13 +618,13 @@
 
 <script>	// Dynamically add options to the existing select element
 	const obrFormOptions = [
-		{ label: 'GCEA', url: 'https://forms.zohopublic.com/collectivecleanenergy1/form/GunnisonCountyElectricAssocCCEFOnBillElectrifyandS/formperma/R-dr3DDYQk8yykcvdR-o4rPiHLWMgO1TpDEDKHmy9qE' },
-		{ label: 'Highline Electric', url: 'https://forms.zohopublic.com/collectivecleanenergy1/form/HighlineCCEFOnBillElectrifyandSaveInterestForm/formperma/RSL2U95eY19jb6qNtzZVjJR6cHjUZgx3uPi9Jc_pI_k' },
-		{ label: 'Mountain View', url: 'https://forms.zohopublic.com/collectivecleanenergy1/form/MountainViewElectricAssocCCEFOnBillElectrifyandSav/formperma/lM8qnoWIkgdpfPOfl15UQqfIEOscXhQTHphuI68PUJ4' },
-		{ label: 'San Luis Valley REC', url: 'https://forms.zohopublic.com/collectivecleanenergy1/form/SanLuisValleyRECCCEFOnBillElectrifyandSaveInterest/formperma/y0pds0e-z9UO0XA9LpxBRTa8VTKdO1yIIxFa1n6_yMA' },
-		{ label: 'San Miguel Power Assoc.', url: 'https://forms.zohopublic.com/collectivecleanenergy1/form/SanMiguelPowerAssocCCEFOnBillElectrifyandSaveInter/formperma/4o0OOvghW353X8m2y_01jAccDDHKjI7YSYUKqkB68Tg' },
-		{ label: 'SDCEA', url: 'https://forms.zohopublic.com/collectivecleanenergy1/form/SangredeCristoCCEFOnBillElectrifyandSaveInterestFo/formperma/wYSz6GspVsS7zf-gjnGhBB1h9k_yCd7PMVprMsFeqcY' },
-		{ label: 'White River Electric', url: 'https://forms.zohopublic.com/collectivecleanenergy1/form/WhiteRiverCCEFOnBillElectrifyandSaveInterestForm/formperma/ZmBWtEiLKydjSjfQHXZeihCTNg1J4DaP3TnjXo2Rtao' }
+		{ label: 'GCEA', url: 'https://forms.zohopublic.com/collectivecleanenergy1/form/GunnisonCountyElectricAssocCCEFOnBillElectrifyandS/formperma/R-dr3DDYQk8yykcvdR-o4rPiHLWMgO1TpDEDKHmy9qE?zf_rszfm=1' },
+		{ label: 'Highline Electric', url: 'https://forms.zohopublic.com/collectivecleanenergy1/form/HighlineCCEFOnBillElectrifyandSaveInterestForm/formperma/RSL2U95eY19jb6qNtzZVjJR6cHjUZgx3uPi9Jc_pI_k?zf_rszfm=1' },
+		{ label: 'Mountain View', url: 'https://forms.zohopublic.com/collectivecleanenergy1/form/MountainViewElectricAssocCCEFOnBillElectrifyandSav/formperma/lM8qnoWIkgdpfPOfl15UQqfIEOscXhQTHphuI68PUJ4?zf_rszfm=1' },
+		{ label: 'San Luis Valley REC', url: 'https://forms.zohopublic.com/collectivecleanenergy1/form/SanLuisValleyRECCCEFOnBillElectrifyandSaveInterest/formperma/y0pds0e-z9UO0XA9LpxBRTa8VTKdO1yIIxFa1n6_yMA?zf_rszfm=1' },
+		{ label: 'San Miguel Power Assoc.', url: 'https://forms.zohopublic.com/collectivecleanenergy1/form/SanMiguelPowerAssocCCEFOnBillElectrifyandSaveInter/formperma/4o0OOvghW353X8m2y_01jAccDDHKjI7YSYUKqkB68Tg?zf_rszfm=1' },
+		{ label: 'SDCEA', url: 'https://forms.zohopublic.com/collectivecleanenergy1/form/SangredeCristoCCEFOnBillElectrifyandSaveInterestFo/formperma/wYSz6GspVsS7zf-gjnGhBB1h9k_yCd7PMVprMsFeqcY?zf_rszfm=1' },
+		{ label: 'White River Electric', url: 'https://forms.zohopublic.com/collectivecleanenergy1/form/WhiteRiverCCEFOnBillElectrifyandSaveInterestForm/formperma/ZmBWtEiLKydjSjfQHXZeihCTNg1J4DaP3TnjXo2Rtao?zf_rszfm=1' }
 	];
 
 
