--- a/annual-report-2024.htm
+++ b/annual-report-2024.htm
@@ -89,7 +89,7 @@
 	</> -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/css/css_z5ZMP6J7ncjZtOs_I63qX6QwGU6XHgkiNo030ifdVBc.css" />
 	<link rel="stylesheet"
