--- a/western-watts.htm
+++ b/western-watts.htm
@@ -15,7 +15,7 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;@400;700&display=swap" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&display=swap" rel="stylesheet" />
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/css/css_Rli8DIVnIKbjfXhlxva1M3yFKBDc26-qMFDXgVLNaEY.css" />
 	<link rel="stylesheet"
