feat(wildfire-lp): slider and icons

--- a/wildfire-lp.htm
+++ b/wildfire-lp.htm
@@ -84,11 +84,11 @@
 				how Tri-State
 				worked with others to preserve and rebuild vital infrastructure.
 			</p>
+
 			<p>
 				<a href="#"
 					class="inline-flex items-center gap-2 rounded-full border border-solid border-white px-4 py-2 font-normal text-white no-underline transition-transform">
-					<img src="https://tristate.coop/sites/default/files/images/icons/button-audio-icon.svgd"
-						alt="audio icon" class="h-4" />
+					<img src="assets/svg/microphone-solid-full-white.svg" alt="audio icon" class="h-6" />
 					Lee Fire Podcast Episode
 				</a>
 			</p>
@@ -121,12 +121,12 @@
 					target="_self">management projects</a>, transmission
 				system upgrades so we can maintain safe, reliable energy for our members.
 			</p>
+			<p>[What does the video go to?]</p>
 			<p>
 
 				<a href="https://tristate.coop/podcast-western-watts-wildfire-mitigation-curtis-hartenstine-tri-state"
 					class="inline-flex items-center gap-2 rounded-full border border-solid border-black px-4 py-2 font-normal text-black no-underline transition-transform">
-					<img src="https://tristate.coop/sites/default/files/images/icons/button-audio-icon.svgd"
-						alt="audio icon" class="h-4" />
+					<img src="assets/svg/microphone-solid-full.svg" alt="audio icon" class="h-6" />
 					Wildfire Mitigation Program Podcast
 				</a>
 			</p>
@@ -163,56 +163,108 @@
 		<div class="swiper ts-slider ts-slider-esg">
 			<!-- Additional required wrapper -->
 			<div class="swiper-wrapper">
-				<!-- Slides -->
-				<div class="swiper-slide ts-slide">
-					<div class="absolute grid size-full place-content-center">
-						<img src="https://tristate.coop/sites/default/files/images/resources/wildfire-mitigation/LaVetaVideoCover_web.jpg"
-							alt="Wildfire Modeling" class="absolute size-full object-cover" />
 
-						<a href="https://www.youtube.com/embed/amxqouPLTac" data-featherlight="iframe"
+
+				<!-- High Plains  -->
+				<div class="swiper-slide ts-slide">
+					<div class="grid size-full place-content-center">
+
+						<figure class="absolute size-full object-cover">
+							<img src="/assets/images/high-plains-video-900x506.jpg" />
+							<figcaption
+								class="absolute box-border bottom-0 w-full border-0 bg-black/50 text-white text-center text-balance">
+								After years of careful planning, High Plains Power Electric Cooperative buries powerline
+								in Dubois, WY to reduce
+								wildfire risk.
+							</figcaption>
+						</figure>
+
+						<a href="https://www.youtube.com/embed/#" data-featherlight="iframe"
 							data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
-							data-featherlight-iframe-width="500" class="z-10">
+							data-featherlight-iframe-width="500" class="relative z-10 cursor-help">
 							<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
 								alt="Play button" class="size-44" />
 						</a>
 					</div>
 				</div>
 
-				<div class="swiper-slide ts-slide ts-slide-figure">
-					<figure>
-						<img
-							src="https://tristate.coop/sites/default/files/images/resources/wildfire-mitigation/SIEAVegMgmt_web.jpg" />
-						<figcaption class="text-balance">San Isabel Electric employees trim trees in Buelah, CO
-						</figcaption>
-					</figure>
+				<!-- Mora -->
+				<div class="swiper-slide ts-slide">
+					<div class="grid size-full place-content-center">
+
+						<figure class="absolute size-full object-cover">
+							<img src="https://tristate.coop/sites/default/files/images/video-placeholder.png" />
+							<figcaption
+								class="absolute box-border bottom-0 w-full border-0 bg-black/50 text-white text-center text-balance">
+								Mora-San Miguel Electric Cooperative deals with the aftermath of the Calf Canyon/Hermits
+								Peak Fire in New Mexico.
+							</figcaption>
+						</figure>
+
+						<a href="https://www.youtube.com/embed/#" data-featherlight="iframe"
+							data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
+							data-featherlight-iframe-width="500" class="relative z-10 cursor-help">
+							<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
+								alt="Play button" class="size-44" />
+						</a>
+					</div>
 				</div>
 
+				<!-- La Veta -->
 				<div class="swiper-slide ts-slide">
-					<div class="absolute grid size-full place-content-center">
-						<img src="https://tristate.coop/sites/default/files/images/resources/wildfire-mitigation/SanMiguelPanoAIHelicopter_web.jpg"
-							alt="Helicopter" class="absolute size-full object-cover" />
+					<div class="grid size-full place-content-center">
+
+						<figure class="absolute size-full object-cover">
+							<img
+								src="https://tristate.coop/sites/default/files/images/resources/wildfire-mitigation/LaVetaVideoCover_web.jpg" />
+							<figcaption
+								class="absolute box-border bottom-0 w-full border-0 bg-black/50 text-white text-center text-balance">
+								In Southwestern Colorado, the community of La Veta comes together to mitigate flooding
+								risks after the Spring Creek
+								Fire.
+							</figcaption>
+						</figure>
+
+						<a href="https://www.youtube.com/embed/vH6f4cklvAI" data-featherlight="iframe"
+							data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
+							data-featherlight-iframe-width="500" class="relative z-10">
+							<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
+								alt="Play button" class="size-44" />
+						</a>
+					</div>
+				</div>
+
+				<!-- SMPA -->
+				<div class="swiper-slide ts-slide">
+					<div class="grid size-full place-content-center">
+
+						<figure class="absolute size-full object-cover">
+							<img src="https://tristate.coop/sites/default/files/images/video-placeholder.png" />
+							<figcaption
+								class="absolute box-border bottom-0 w-full border-0 bg-black/50 text-white text-center text-balance">
+								San-Miguel Power Association, the Telluride Fire Department and Pano AI teamed up to
+								pioneer new wildfire mitigation
+								technology.
+							</figcaption>
+						</figure>
+
 						<a href="https://www.youtube.com/embed/7kQW9ESq1zE" data-featherlight="iframe"
 							data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
-							data-featherlight-iframe-width="500" class="z-10">
+							data-featherlight-iframe-width="500" class="relative z-10">
 							<img src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg"
 								alt="Play button" class="size-44" />
 						</a>
 					</div>
 				</div>
+
 			</div>
-			<!-- If we need pagination -->
-
-			<div class="swiper-pagination">&nbsp;</div>
-			<!-- If we need navigation buttons -->
-
+			<div class="swiper-pagination h-8">&nbsp;</div>
 			<div class="swiper-button-prev">&nbsp;</div>
-
 			<div class="swiper-button-next">&nbsp;</div>
-			<!-- If we need scrollbar -->
-
-			<!-- <div class="swiper-scrollbar">&nbsp;</div> -->
 		</div>
 	</section>
+
+
 
 	<!-- Additional resources -->
 	<section class="px-8 py-20 text-center sm:grid sm:place-content-center">
@@ -224,7 +276,7 @@
 		<div class="grid gap-y-16 gap-x-8 sm:grid-cols-2 xl:grid-cols-4">
 			<!-- Resource 1 -->
 			<div class="text-center space-y-4">
-				<p><a href="#"
+				<p><a href="https://tristate.coop/wildfire-mitigation"
 						class="inline-flex items-center gap-2 rounded-full border border-solid border-black px-4 py-2 font-normal text-black no-underline transition-transform">Wildfire
 						Mitigation</a>
 				</p>
@@ -235,7 +287,7 @@
 
 			<!-- Resource 2 -->
 			<div class="text-center space-y-4">
-				<p><a href="#"
+				<p><a href="https://tristate.coop/vegetation-management-what-it-and-why-it-works"
 						class="inline-flex items-center gap-2 rounded-full border border-solid border-black px-4 py-2 font-normal text-black no-underline transition-transform">Vegetation
 						Management</a>
 				</p>
@@ -247,7 +299,7 @@
 			<!-- Resource 3 -->
 			<div class="text-center space-y-4">
 				<p><a href="#"
-						class="inline-flex items-center gap-2 rounded-full border border-solid border-black px-4 py-2 font-normal text-black no-underline transition-transform">Interactive
+						class="inline-flex items-center gap-2 rounded-full border border-solid border-black px-4 py-2 font-normal text-black no-underline transition-transform cursor-help">Interactive
 						Red Flag Map</a>
 				</p>
 
@@ -262,7 +314,7 @@
 			<!-- Resource 4 -->
 			<div class="text-center space-y-4">
 				<p><a href="#"
-						class="inline-flex items-center gap-2 rounded-full border border-solid border-black px-4 py-2 font-normal text-black no-underline transition-transform">Home
+						class="inline-flex items-center gap-2 rounded-full border border-solid border-black px-4 py-2 font-normal text-black no-underline transition-transform cursor-help">Home
 						Wildfire Safety</a>
 				</p>
 
@@ -273,7 +325,11 @@
 		</div>
 	</section>
 
-
+	<section class="min-h-96 bg-gray text-center sm:grid sm:place-content-center">
+		<DIV>
+			[BLOG POSTS]
+		</DIV>
+	</section>
 
 	<script
 		src="https://tristate.coop/sites/default/files/asset_injector/js/swiper_9_3_2-36d6a8a781e73f708975edfc2809913b.js?sk35jq"></script>
