change(wildfire-lp): v2 edits from JP

--- a/wildfire-lp.htm
+++ b/wildfire-lp.htm
@@ -121,7 +121,6 @@
 					target="_self">management projects</a>, transmission
 				system upgrades so we can maintain safe, reliable energy for our members.
 			</p>
-			<p>[What does the video go to?]</p>
 			<p>
 
 				<a href="https://tristate.coop/podcast-western-watts-wildfire-mitigation-curtis-hartenstine-tri-state"
@@ -239,7 +238,7 @@
 					<div class="grid size-full place-content-center">
 
 						<figure class="absolute size-full object-cover">
-							<img src="https://tristate.coop/sites/default/files/images/video-placeholder.png" />
+							<img src="assets/images/smpa-video-900x600.png" />
 							<figcaption
 								class="absolute box-border bottom-0 w-full border-0 bg-black/50 text-white text-center text-balance">
 								San-Miguel Power Association, the Telluride Fire Department and Pano AI teamed up to
@@ -292,8 +291,9 @@
 						Management</a>
 				</p>
 
-				<p class="text-sm">We staff two real-time power trading desks to buy, sell and monitor power
-					supply and demand for Tri-State 24/7, 365 days a year.</p>
+				<p class="text-sm">Learn how we responsibly manage vegetation in our right-of-ways to help minimize
+					risks from trees and vegetation that
+					could interfere with our transmission lines.</p>
 			</div>
 
 			<!-- Resource 3 -->
