feat(wildfire-lp): links added and content chang

--- a/wildfire-lp.htm
+++ b/wildfire-lp.htm
@@ -86,7 +86,7 @@
 			</p>
 
 			<p>
-				<a href="#"
+				<a href="https://tristate.coop/podcast-western-watts-zombies-tornadoes-and-wildfires"
 					class="inline-flex items-center gap-2 rounded-full border border-solid border-white px-4 py-2 font-normal text-white no-underline transition-transform">
 					<img src="assets/svg/microphone-solid-full-white.svg" alt="audio icon" class="h-6" />
 					Lee Fire Podcast Episode
@@ -141,13 +141,14 @@
 			<h2 class="font-serif text-3xl font-light mb-0">Help co-ops combat fire</h2>
 
 			<p>
-				Tri-State spends 25% of our annual transmission maintenance budget on wildfire mitigation. However, no
-				risk can be completely mitigated, and not-for-profit utilities are one spark away from bankruptcy. We
-				are working with elected officials across our territory to modify the wildfire liability utilities face.
-				Insurance agencies are no longer offering adequate wildfire insurance policies to cooperatives and the
-				smaller policies they do offer have recently doubled in price for half the coverage. To continue
-				providing safe, reliable and affordable energy, rural electric cooperatives need protection from
-				wildfire risks.
+				Tri-State invests significantly in wildfire mitigation, however, no risk can be completely mitigated.
+				Insurance agencies are no longer offering adequate wildfire insurance policies to electric cooperatives,
+				and the smaller policies they do offer have recently doubled in price for only half the coverage.
+				Additionally, electric cooperatives face high wildfire liability, including for fires not caused by
+				their equipment and when they have taken all precautions to mitigate those risks. To continue providing
+				safe, reliable and affordable energy, rural electric cooperatives need protection from wildfire risks.
+				Tri-State is working with elected officials across our service territory to develop solutions that
+				better protect electric cooperatives from the growing risks of wildfire.
 			</p>
 			<p>
 				The videos below show how our members are also doing their part—both before and after a fire.
@@ -313,7 +314,7 @@
 
 			<!-- Resource 4 -->
 			<div class="text-center space-y-4">
-				<p><a href="#"
+				<p><a href="https://tristate.coop/protecting-your-home-year-round-wildfires"
 						class="inline-flex items-center gap-2 rounded-full border border-solid border-black px-4 py-2 font-normal text-black no-underline transition-transform cursor-help">Home
 						Wildfire Safety</a>
 				</p>
