--- a/index.htm
+++ b/index.htm
@@ -40,6 +40,11 @@
 				</div>
 				<dl class="divide-y divide-slate-200 px-6 py-4">
 					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./wildfire-lp.htm" target="_blank"
+								class="text-slate-900 hover:underline">Wildfire Landing</a></dt>
+						<dd class="text-sm text-slate-500">September 25, 2025</dd>
+					</div>
+					<div class="flex justify-between gap-x-4 py-3">
 						<dt class="text-slate-500"><a href="./members.htm" target="_blank"
 								class="text-slate-900 hover:underline">Members</a></dt>
 						<dd class="text-sm text-slate-500">June 28, 2025</dd>
