feat(leadership-team): remove Clifton, add Bryan Davis

--- a/leadership-team.html
+++ b/leadership-team.html
@@ -62,25 +62,24 @@
 	</div>
 
 	<div class="ts-flip-card">
-		<div class="ts-flip-card-front"><img alt="Clifton Karnei, Interim Chief Financial Officer"
-				class="img-responsive" height="500"
-				src="https://tristate.coop/sites/default/files/images/leadership/2025/clifton-karnei-400x500.jpg"
+		<div class="ts-flip-card-front"><img alt="Bryan Davis, Chief Financial Officer" class="img-responsive"
+				height="500"
+				src="https://tristate.coop/sites/default/files/images/leadership/2025/bryan-davis-400x500-temp.jpg"
 				typeof="foaf:Image" width="400" />
 			<div class="front-label">
-				<h3 class="front-title">Clifton Karnei</h3>
+				<h3 class="front-title">Bryan Davis</h3>
 
-				<p>Interim Chief Financial Officer</p>
+				<p>Chief Financial Officer</p>
 			</div>
 		</div>
 
 		<div class="ts-flip-card-back">
-			<p>Clifton Karnei joined Tri-State as the Interim CFO in 2025. He previously served as the Executive Vice
-				President and General Manager of Brazos Electric Power Cooperative, Inc., the largest generation and
-				transmission cooperative in Texas until he retired in 2023. Clifton holds a Bachelor of Business
-				Administration in accounting, summa cum laude, from the University of Texas at San Antonio and is a
-				certified public accountant. He has served in leadership roles on the boards of several national energy
-				organizations, including the Electric Reliability Council of Texas (ERCOT), ACES Power Marketing, and
-				the National Renewables Cooperative Organization (NRCO).&nbsp;</p>
+			<p>Bryan joined Tri-State in September 2025, bringing over 20 years of experience with expertise in
+				accounting, financial planning, and utility strategies across multi-state regions. Prior to joining
+				Tri-State, Bryan led financial strategy for a utility operating company serving 1.6 million electric and
+				1.5 million natural gas customers and previously held roles of increasing responsibility in utility
+				accounting across multiple regions. Bryan holds Bachelor of Science and Master of Accountancy degrees
+				from Brigham Young University and is a certified public accountant.</p>
 		</div>
 	</div>
 
